--- a/BBBKliensAlkalmazas/BBBLtdUnitTest/BBBLtdUnitTest.csproj
+++ b/BBBKliensAlkalmazas/BBBLtdUnitTest/BBBLtdUnitTest.csproj
@@ -73,6 +73,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BBBKliensAlkalmazas\BBBKliensAlkalmazas.csproj">
+      <Project>{12d69ba8-78d2-4330-87f0-3616d7535401}</Project>
+      <Name>BBBKliensAlkalmazas</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
