--- a/BBBKliensAlkalmazas/BBBKliensAlkalmazas/BBBKliensAlkalmazas.csproj
+++ b/BBBKliensAlkalmazas/BBBKliensAlkalmazas/BBBKliensAlkalmazas.csproj
@@ -106,6 +106,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstractions\IAccountManager.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="DataModels\Item.cs" />
     <Compile Include="DataModels\User.cs" />
     <Compile Include="Form1.cs">
