--- a/BBBKliensAlkalmazas/BBBKliensAlkalmazas/BBBKliensAlkalmazas.csproj
+++ b/BBBKliensAlkalmazas/BBBKliensAlkalmazas/BBBKliensAlkalmazas.csproj
@@ -69,6 +69,7 @@
       <HintPath>..\packages\NUnit.3.13.3\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Activities" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -110,6 +111,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="DataModels\Item.cs" />
     <Compile Include="DataModels\User.cs" />
+    <Compile Include="Entities\Account.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +128,7 @@
     <Compile Include="Search.Designer.cs">
       <DependentUpon>Search.cs</DependentUpon>
     </Compile>
+    <Compile Include="Services\AccountManager.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
